# giitestutils

./: LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  gtk-doc.make  gtu.mk  gtu_tests.m4
build-aux/: tap-test
docs/: Makefile.am  css.xml  getting-started.xml  gtk-doc.xsl.in  gtkdoc-md2db.py.in  gtkdoc-xslpath.py.in  gtu-docs.xml  intro.xml  running-tests.xml
docs/considerations/: considerations.xml  gfuncs-avoid.md  gfuncs-okay.md  logging.md  main.xml  memory-leaks.xml
docs/running-tests/: args.xml  env-vars.xml  main.xml  make-vars.xml  mode-list.xml
include/: gtu-asserts.h  gtu-case.h  gtu-complex.h  gtu-log-consumer.h  gtu-object.h  gtu-path.h  gtu-skips.h  gtu-suite.h  gtu.h
src/: Makefile.am  flags.c  g-test-case.c  gtu-priv.h  gtu-test.c  init.c  log-consumer.c  log-consumer.h  log.c  log.h  object.c  path.c  test-case.c  test-suite.c
src/gtu-test/: Makefile.am  testvala.vala
src/log/: color-table.c.in  color.c  generate-color-table.py  glib-format.c  glib-handlers.c  hooks.c  log-color.h  log-glib.h  log-hooks.h  logio.h  priv.h  tap.c
src/test-case/: complex.c  expect.c  priv-complex.h  priv-setjmp.h  priv.h  run-init.c  run-setjmp.c  run.c  test-case.c
src/test-suite/: priv.h  run.c  test-suite.c
test-progs/: Makefile.am  testc.c  testempty.c  testemptysuite.c  testvala.vala
vapi/: gtu.vapi
