SUBDIRS	= src

if ENABLE_CHECK_PROGS
SUBDIRS += test-progs
endif

if ENABLE_GTK_DOC
SUBDIRS += docs
endif

MAINTAINERCLEANFILES = \
	$(GITIGNORE_MAINTAINERCLEANFILES_TOPLEVEL) \
	$(GITIGNORE_MAINTAINERCLEANFILES_MAKEFILE_IN) \
	$(GITIGNORE_MAINTAINERCLEANFILES_M4_LIBTOOL) \
	m4/pkg.m4 m4/gtk-doc.m4

-include git.mk
